# AI-Based-Citizen-Grievance-Classification-System

./: .gitignore  FINAL_INTEGRATION_SUMMARY.md  GITHUB_CODESPACES_SETUP.md  INTEGRATION_VERIFICATION_REPORT.md  README.md  SETUP_AND_TESTING_GUIDE.md  generate-icons.js  package-lock.json  package.json  quick-start.sh  start-backend-ai.sh  start.sh
Frontend/: index.html  (+1 more)
JANSETU/: .gitignore  .replit  .vercelignore  README_READY_TO_RUN.md  STARTUP.md  deploy.sh  health_check.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.nix
JANSETU/.github/workflows/: deploy-backend-fly.yml  deploy-frontend-vercel.yml
JANSETU/attached_assets/: Pasted-JanSetu-Complete-Replit-Prompt-Start-to-End-All-Logic-F_1778488714241.txt
JANSETU/backend/: .env.example  fly.toml  requirements.txt  seed_database.py
JANSETU/backend/app/: main.py
JANSETU/backend/app/api/: __init__.py  auth.py  complaints.py  grievances.py  locations.py  officer.py  officers_v1.py  user_routes.py
JANSETU/backend/app/db/: local_store.py  supabase_client.py
JANSETU/backend/app/models/: schemas.py
JANSETU/backend/app/services/: __init__.py  ai_pipeline.py  duplicate_service.py  officer_service.py  routing_engine.py
JANSETU/backend/app/utils/: auth.py
JANSETU/backend/tests/: test_routes.py
JANSETU/frontend/: .env.production  package-lock.json  vercel.json  vite.config.js
JANSETU/frontend/src/: registerSW.js
JANSETU/frontend/src/apps/: Login.css  Login.jsx
JANSETU/frontend/src/config/: api.js
JANSETU/services/ai-engine/: main.py  requirements.txt  test_clip.py
(+203 files in other folders)
